# Socks-Proxy-Server

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  config.json  index.md  main  main.cpp
Input/: ConfigReader.cpp  ConfigReader.h
Logger/: Logger.cpp
Proxy/: Server.cpp  Server.h  Session.cpp  Session.h
include/: ConfigReader.h  LogVariables.h  Logger.h  Server.h  Session.h
src/: ConfigReader.cpp  LogVariables.cpp  Logger.cpp  Server.cpp  Session.cpp  main.cpp
